--- a/client_code/Frame/form_template.yaml
+++ b/client_code/Frame/form_template.yaml
@@ -8,14 +8,17 @@ components:
   name: navbar_links
   layout_properties: {slot: nav-right}
   components:
+  - type: ColumnPanel
+    properties: {}
+    name: content_panel
+    components:
+    - name: radio_button_1
+      properties: {text: radio_button_1}
+      type: RadioButton
+      layout_properties: {grid_position: 'VBEKMM,SKECCZ'}
   - name: spacer_2
     properties: {height: 32}
     type: Spacer
-- type: ColumnPanel
-  properties: {}
-  name: content_panel
-  layout_properties: {slot: default}
-  components: []
 - type: FlowPanel
   properties: {}
   name: flow_panel_1
